input text align fix

--- a/frontend/less/espo/bootstrap/forms.less
+++ b/frontend/less/espo/bootstrap/forms.less
@@ -85,7 +85,7 @@ output {
 .form-control {
   display: block;
   width: 100%;
-  height: var(--input-height-base); // Make inputs at least the height of their button counterpart (base line-height + padding + border)
+  //height: var(--input-height-base); // Make inputs at least the height of their button counterpart (base line-height + padding + border)
   padding: var(--padding-base-vertical) var(--padding-base-horizontal);
   font-size: var(--font-size-base);
   line-height: var(--line-height-base);
@@ -273,7 +273,7 @@ input[type="checkbox"] {
 }
 .form-group-sm {
   .form-control {
-    height: var(--input-height-small);
+    //height: var(--input-height-small);
     padding: var(--padding-small-vertical) var(--padding-small-horizontal);
     font-size: var(--font-size-small);
     line-height: var(--line-height-small);
@@ -300,7 +300,7 @@ input[type="checkbox"] {
 }
 .form-group-lg {
   .form-control {
-    height: var(--input-height-large);
+    //height: var(--input-height-large);
     padding: var(--padding-large-vertical) var(--padding-large-horizontal);
     font-size: var(--font-size-large);
     line-height: var(--line-height-large);
